
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/app_name">

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="@string/already"
            android:defaultValue="@string/searching"/>

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/desc"
            android:summary="@string/web_is_loading"
            android:dialogTitle="@string/desc"
            android:dependency="checkbox_preference" />

    </PreferenceCategory>

<!--    <PreferenceCategory-->
<!--        android:title="@string/title_second_section">-->

<!--        <ListPreference-->
<!--            android:key="list_preference"-->
<!--            android:title="@string/title_list_preference"-->
<!--            android:dialogTitle="@string/dialog_title_list_preference"-->
<!--            android:entries="@array/entries_list_preference"-->
<!--            android:entryValues="@array/entryvalues_list_preference" />-->

<!--        <Preference-->
<!--            android:title="@string/title_intent_preference">-->
<!--            <intent android:action="android.intent.action.VIEW"-->
<!--                android:data="http://codepath.com/" />-->
<!--        </Preference>-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>