<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_score">

    <fragment
        android:id="@+id/navigation_score"
        android:name="io.github.gladko.justweight.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_second"
        android:name="io.github.gladko.justweight.ui.main.home.HomeListFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_list">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/navigation_score" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_goal"
        android:name="io.github.gladko.justweight.ui.main.goal.GoalFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_goal" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="io.github.gladko.justweight.ui.main.account.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_account" />
</navigation>